Fixed overflow in accordion

--- a/src/app/deploy-instance/deploy-instance.component.scss
+++ b/src/app/deploy-instance/deploy-instance.component.scss
@@ -2,7 +2,9 @@
     border: 2px solid #EEEEEE;
     border-radius: 5px;
     max-height: 338px;
-    overflow-x: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    margin-bottom: -2px;
 }
 .accordion-header {
     display: flex;
